# animusic

./: README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/scripts/: song_importer.py
backend/src/importer/: song_importer.py
backend/tests/: test_song_importer.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  supabase-client.ts
frontend/src/components/: Navbar.tsx  RankStartScreen.tsx  SongCard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Home.tsx  Leaderboard.tsx  Rank.tsx
